--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-.terraform/\n*.tfstate\n*.tfstate.backup\n.terraform.lock.hcl\n
+# Ignore Terraform files
+.terraform/
+*.tfstate
+*.tfstate.backup
+.terraform.lock.hcl
+terraform.tfvars
+
